src/test/deca/context/valid/avecObjet/class_selection_unitaire.deca
// Description :
//    Test unitaire : Selection.
//
// Resultats :
//    OK

class A {
    int x;
}

{
    A a = new A();       
    a.x = 42;            
    println("a.x = ", a.x);
}
